@@ -25,7 +25,8 @@ php7 = "It looks like you are using PHP7.<br />Fatal errors got removed in PHP7,
 php7yellow = "The fatal error handler does not work with PHP7!"
 analyseConstants = "Here you can toggle, if kreXX shall analyse all constants of a class."
 getterHelpInfo = "Getter methods will NOT get called to get a result. Instead, kreXX tries to get the (possible) result from the properties of this class.<br/> If the getter method is used to compute this value, the values here may be inaccurate."
-maximumLevelReached = "Maximum for analysis reached. I will not go any further.<br /> To increase this value, change the runtime => level setting."
+maximumLevelReached1 = "Maximum nesting level for the analysis was reached. I will not go any further."
+maximumLevelReached2 =  "To increase this value, change the runtime => level setting."
 stringTooLarge = "This is a very large string with a none-standard encoding.<br /> For security reasons, we must escape it, but it is too large for this. Sorry."
 configErrorMethodsProtected = "Wrong configuration for: 'methods => analyseProtectedMethods'! Expected boolean. The configured setting was not applied!"
 configErrorMethodsPrivate = "Wrong configuration for: 'methods => analysePrivateMethods'! Expected boolean. The configured setting was not applied!"
