@@ -23,6 +23,7 @@
 - Bugfix: Make sure that there are no leftover chunks after a run.
 - Bugfix: Prevent large output in case of arrays with more than 100
   items.
+- Bugfix: Escaped info text about the maximum resting level.
 
 2.2.0
 - Added more search pattern and source code parsing to the
